# text-embedding-evaluation

./: .env.sample  Makefile  README.md  config.yml  pyproject.toml
src/: evaluate.py  experiments.py  run_evaluations.py
